# Puzzle

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.prodcontainer/: jetson.Dockerfile
src/puzzle_gazebo/launch/: motion.launch
src/puzzle_motion/: ReadMe.md
src/puzzle_motion/autotakeoff/launch/: takeoff.launch
src/puzzle_motion/autotakeoff/scripts/: takeoff_node.py
src/puzzle_motion/controll/: CMakeLists.txt  angl.py  package.xml
src/puzzle_motion/controll/launch/: controll_server.launch  indoors.launch  launch_controll.launch  outdoors.launch  square.launch  square_timer_node.launch  timer.launch
src/puzzle_motion/controll/scripts/: flight_node_test.py  motion_server.py  motion_server_in_doors.py  motion_server_out_doors.py  square_timer_node.py  timer_node.py
src/puzzle_motion/controll/srv/: Controll.srv
src/puzzle_motion/flight_tests/: CMakeLists.txt
src/puzzle_motion/flight_tests/launch/: position_hold_test.launch
src/puzzle_motion/motion_controller/launch/: motion_controller.launch
